fix spacing issues on navigation links

--- a/app/ui/header/header.module.css
+++ b/app/ui/header/header.module.css
@@ -5,7 +5,7 @@
     height: 80px;
     position: fixed;
     display: grid;
-    grid-template-columns: 80px 0.7fr 0.7fr 3fr 2fr;
+    grid-template-columns: 80px 1.4fr 3fr 2fr;
     grid-column-gap: 15px;
     top: 0;
     left: 0;
@@ -17,17 +17,34 @@
     grid-column: 1 / 2;
 }
 
-.features {
+.navcontainer {
     grid-column: 2 / 3;
+    display: flex;
+    flex-direction: row;
+    justify-self: flex-start;
+}
+
+.features {
     width: calc((100% - 90px) / 2);
+    display: inline-flex;
+    justify-self: end;
+    min-width: 80px;
+    max-width: 100px;
+    margin-right: 10px;
+    margin-left: 70px;
 }
 
 .pricing {
-    grid-column: 3 / 4;
+    justify-self: start;
+    width: calc((100% - 90px) / 2);
+    min-width: 80px;
+    max-width: 100px;
+    margin-left: 10px;
+    margin-right: 40px;
 }
 
 .accountcontainer {
-    grid-column: 5 / 6;
+    grid-column: 4 / 5;
     display: flex;
     flex-direction: row;
     justify-self: flex-end;
