--- a/app/ui/header/headerCard.module.css
+++ b/app/ui/header/headerCard.module.css
@@ -2,7 +2,6 @@
     width: 90%;
     height: 30px;
     align-self: center;
-    justify-self: center;
     display: inline-flex;
     font-size: 16px;
 }
